--- a/onenote.css
+++ b/onenote.css
@@ -16,6 +16,33 @@ a:hover {
     text-decoration: underline;
 }
 
+
+ img.wp-post-image {
+    display:inline-block;
+    float: left;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+}
+
+h2 {
+    color: #555;
+    font-size: 2rem;
+    line-height: 1.15;
+    margin: 0;
+}
+    .single h2 {
+        margin: 1rem auto;
+    }
+
+    h2 a {
+        color: #555;
+        text-decoration: none;
+    }
+
+p {
+    line-height: 1.25;
+}
+
 .skip-link {
     color: #fff;
     display: block;
@@ -124,7 +151,8 @@ a:hover {
         border: 1px solid #ccc;
         box-sizing: border-box;
         color: #333;
-        display: inline-block;
+        cursor: pointer;
+        display: block;
         height: 25rem;
         line-height: 1.4;
         margin: 0;
@@ -134,33 +162,23 @@ a:hover {
         position:relative;
         text-align: justify;
         text-decoration: none;
-        text-overflow: ellipsis;
         width: 100%;
     }
-
-.home #main .post-link:before {
-    bottom: 0;
-    content: '';
-    position: absolute;
-    right: 0;
-}
-
-/* hide ... if we have text, which is less than or equal to max lines */
-.home #main .post-link:after {
-    background: white;
-    content: '';
-    height: 1em;
-    margin-top: 0.2em;
-    position: absolute;
-    right: 0;
-    width: 1em;
-}
 
     .home #main .post-link:hover {
         background-color: #fff;
         border: 1px solid #aaa;
         box-shadow: 2px 2px 2px #ccc;
     }
+
+        .home #main .post-link .read-more {
+            color: #555;
+            font-weight: 500;
+        }
+
+        .home #main .post-link:hover .read-more {
+            text-decoration: underline;
+        }
 
     .home #main .post {
         height: 100%;
@@ -169,26 +187,7 @@ a:hover {
         width: 100%;
     }
 
-     img.wp-post-image {
-        display:inline-block;
-        float: left;
-        margin-bottom: 1rem;
-        margin-right: 1rem;
-    }
 
-    h2 {
-        color: #555;
-        font-size: 2rem;
-        margin: 0;
-    }
-        .single h2 {
-            margin: 1rem auto;
-        }
-
-        h2 a {
-            color: #555;
-            text-decoration: none;
-        }
     /* Post tags */
     .tags {
         width: 100%;
