--- a/onenote.css
+++ b/onenote.css
@@ -186,6 +186,12 @@ textarea {
     grid-row: 3 / span 2;
     padding: 0 1rem;
 }
+
+.single #main,
+.page #main {
+	width: 60rem;
+	margin: 0 auto;
+}
     /* Homepage main grid setup */
     .home #main,
     .archive #main {
