increasing grid gap in sidebar

--- a/onenote.css
+++ b/onenote.css
@@ -344,7 +344,8 @@ textarea {
 
         .sidebar > ul {
             display:-ms-grid;
-  display: grid;            grid-gap: 1rem;
+            display: grid;
+            grid-gap: 5rem;
             -ms-grid-columns: (1fr)[2];
                 grid-template-columns: repeat(2, 1fr);
         }
